# edge-ai-study

./: GB10.md  ORIN.md  RASPI5.md  README.md  TEST.md  vulkan-low-smem.patch
artifacts/: VP_VULKANINFO_V3D_4_2_14_0_25_0_7.json  VP_VULKANINFO_V3D_7_1_10_2_25_0_7.json  pi4_v3d_ident.txt  pi5_eglinfo.txt  pi5_v3d_ident.txt
code/: v3d-lane-qpu-bias.patch  vulkan-low-smem-optimized.patch  vulkan-low-smem.patch
code/benchmarks/: README.md  pi4_ext16k_full.csv  pi5_ext16k_lsz16x16.csv  pi5_ext16k_lsz16x8.csv  pi5_ext16k_lsz32x8.csv  raspi5_mini_run.csv
code/benchmarks/old/: raspi5_mini_run2.csv  raspi5_run1.csv
code/low-smem-shaders/: README.md
code/low-smem-shaders/GEMM/: mul_mat_mat_low_smem_f32_db_v4.comp  mul_mat_mat_low_smem_f32_sb_v1.comp  mul_mat_mat_low_smem_k_iq_db_v4.comp  mul_mat_mat_low_smem_k_iq_sb_v1.comp  mul_mat_mat_low_smem_qx_db_v4.comp  mul_mat_mat_low_smem_qx_sb_v1.comp
code/low-smem-shaders/GEMV/: block_sum_b.comp  mul_mat_vec_low_smem_f32.comp  mul_mat_vec_low_smem_k_iq.comp  mul_mat_vec_low_smem_qx.comp
code/vk-autotune/: CMakeLists.txt  LICENSE.md  README.md  main.cpp
code/vk-autotune/shaders/: gemm.comp
